--- a/get_videos.ipynb
+++ b/get_videos.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# get_videos\n",
+    "\n",
+    "* チャンネルID一覧を入力とし、全てのチャンネルの動画一覧を取得します\n",
+    "* Quota上限に達した場合は、その段階までの動画一覧を保存します"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Youtube APIを呼び出す\n",
+    "# Youtube APIの準備\n",
     "\n",
     "# APIキーをファイルから取得\n",
     "f = open('secret/apikey', 'r')\n",
@@ -44,33 +54,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 事前準備\n",
     "\n",
     "# 1チャンネルから取得する動画数(最大50)\n",
-    "maxResults = 50\n",
+    "max_results = 50\n",
     "\n",
     "# 参照するチャンネル一覧\n",
-    "# filename = \"input/hololive_channels.csv\"\n",
-    "filename = \"input/okakoro_channels.csv\"\n",
-    "df = pd.read_csv(filename, header=0)\n",
+    "file_select = 'okakoro'\n",
+    "# file_select = 'hololive'\n",
+    "input_file_name = 'input/'+file_select+'_channels.csv'\n",
+    "df = pd.read_csv(input_file_name, header=0)\n",
     "\n",
     "# 保存するディレクトリを作成\n",
-    "os.makedirs('output/okakoro', exist_ok=True)\n",
+    "os.makedirs('output/videos/'+file_select, exist_ok=True)\n",
     "\n",
     "# 途中から取得する場合は下記を変更する\n",
+    "# 大量のデータを取得する場合やり直しが必要なケースもある\n",
     "id_start = 0\n",
     "id_end = df.shape[0]\n",
-    "channel_ids = np.array(df['id'][id_start:id_end])\n",
-    "channel_names = np.array(df['チャンネル'][id_start:id_end])"
+    "channel_ids = np.array(df['ChannelId'][id_start:id_end])\n",
+    "names = np.array(df['Name'][id_start:id_end])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -156,24 +168,23 @@
     }
    ],
    "source": [
-    "# 動画情報を取得する\n",
-    "\n",
+    "# 動画一覧を取得する\n",
     "for i, channel_id in enumerate(channel_ids):\n",
-    "    channel_name = channel_names[i]\n",
-    "    print(channel_name, \":\", i+1, \"/\", channel_ids.size)\n",
+    "    name = names[i]\n",
+    "    print(name, \":\", i+1, \"/\", channel_ids.size)\n",
     "    \n",
     "    # 各チャンネルから全ての動画IDを取得する\n",
     "    video_ids = []\n",
-    "    nextPageToken = 'search_start'\n",
+    "    next_page_token = 'search_start'\n",
     "    while True:\n",
-    "        if nextPageToken == 'search_start':            \n",
+    "        if next_page_token == 'search_start':            \n",
     "            try:\n",
     "                videos = youtube.search().list(\n",
     "                    part = 'id', \n",
     "                    channelId = channel_id, \n",
     "                    order = 'viewCount',\n",
     "                    type = \"video\",\n",
-    "                    maxResults = maxResults, \n",
+    "                    maxResults = max_results, \n",
     "                ).execute()\n",
     "            # HTTPエラー（主にQuota上限）だった場合\n",
     "            except HttpError:\n",
@@ -186,10 +197,9 @@
     "                    channelId = channel_id, \n",
     "                    order = 'viewCount',\n",
     "                    type = 'video',\n",
-    "                    pageToken = nextPageToken,\n",
-    "                    maxResults = maxResults, \n",
-    "                ).execute()      \n",
-    "            # HTTPエラー（主にQuota上限）だった場合\n",
+    "                    pageToken = next_page_token,\n",
+    "                    maxResults = max_results, \n",
+    "                ).execute()\n",
     "            except HttpError:\n",
     "                print('データ参照中にエラーが発生しました')\n",
     "                break\n",
@@ -198,9 +208,9 @@
     "        for video_item in videos['items']:\n",
     "            video_ids.append(video_item['id']['videoId'])\n",
     "        \n",
-    "        # 次のページが存在しない場合終了します\n",
+    "        # 次のページが存在しない場合終了する\n",
     "        if 'nextPageToken' in videos.keys():\n",
-    "            nextPageToken = videos['nextPageToken']\n",
+    "            next_page_token = videos['nextPageToken']\n",
     "        else:\n",
     "            break\n",
     "    \n",
@@ -218,7 +228,7 @@
     "            \n",
     "        video_snippet = video_detail['items'][0]['snippet']\n",
     "        video_statistics = video_detail['items'][0]['statistics']\n",
-    "        video_contentDetails = video_detail['items'][0]['contentDetails']\n",
+    "        video_content_details = video_detail['items'][0]['contentDetails']\n",
     "        # snippetから取得\n",
     "        date = video_snippet['publishedAt']\n",
     "        title = video_snippet['title']\n",
@@ -226,82 +236,81 @@
     "        description = video_snippet['description']\n",
     "        category_id = video_snippet['categoryId']\n",
     "        # contentDetailsから取得        \n",
-    "        duration = pt2sec(video_contentDetails['duration'])\n",
-    "        duration_origin = video_contentDetails['duration']\n",
+    "        duration = pt2sec(video_content_details['duration'])\n",
+    "        duration_origin = video_content_details['duration']\n",
     "        # statisticsから取得\n",
-    "        views = video_statistics['viewCount']\n",
-    "        # 評価数、コメントが非公開の場合は0で埋める\n",
-    "        like = 0\n",
-    "        dislike = 0\n",
-    "        comments = 0\n",
+    "        # 評価数、コメントが非公開の場合は0で埋める（再生数も非公開の動画がある？）\n",
+    "        view_count = 0\n",
+    "        like_count = 0\n",
+    "        dislike_count = 0\n",
+    "        comment_count = 0\n",
+    "        if 'viewCount' in video_statistics.keys():\n",
+    "            view_count = video_statistics['viewCount']\n",
     "        if 'likeCount' in video_statistics.keys():\n",
-    "            like = video_statistics['likeCount']\n",
+    "            like_count = video_statistics['likeCount']\n",
     "        if 'dislikeCount' in video_statistics.keys():\n",
-    "            dislike = video_statistics['dislikeCount']\n",
+    "            dislike_count = video_statistics['dislikeCount']\n",
     "        if 'commentCount' in video_statistics.keys():\n",
-    "            comments = video_statistics['commentCount']\n",
+    "            comment_count = video_statistics['commentCount']\n",
     "        # リストのリストとして情報を格納する\n",
-    "        video_details.append([video_id, channel_name, date, title, thumbnail, category_id, duration, duration_origin, description, views, like, dislike, comments])\n",
+    "        video_details.append([video_id, name, channel_id, date, title, \n",
+    "                              thumbnail, category_id, duration, duration_origin, description, \n",
+    "                              view_count, like_count, dislike_count, comment_count])\n",
     "    \n",
     "    # video_idが取得できていない場合スキップする\n",
     "    if len(video_ids) != 0:\n",
     "        video_details_numpy = np.array(video_details)\n",
     "        video_details_pandas = pd.DataFrame(data=video_details_numpy, \n",
-    "                                     columns=['Id', 'Channel', 'Date', 'Title', 'Thumbnail', 'CategoryId', 'Duration', 'DurationOriginal', 'Description', 'Viewcount', 'LikeCount', 'DislikeCount', 'CommentCount'])\n",
+    "                                            columns=['Id', 'Name', 'ChannelId', 'Date', 'Title', \n",
+    "                                                     'Thumbnail', 'CategoryId', 'Duration', 'DurationOriginal', 'Description', \n",
+    "                                                     'ViewCount', 'LikeCount', 'DislikeCount', 'CommentCount'])\n",
     "        # データが大きいためチャンネルごとに保存する\n",
-    "        video_details_pandas.to_csv('output/okakoro/'+channel_name+'_videos.csv')\n",
+    "        video_details_pandas.to_csv('output/videos/'+file_select+'/'+name+'_videos.csv')\n",
     "\n",
     "print('データ取得が完了 or データ取得を途中で終了しました')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>再生数ソート</h1><div style=\"float:left;\"><img src=\"https://i.ytimg.com/vi/0scxODT68X4/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=0scxODT68X4\">#1. ウミユリ海底譚 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/4muYzftomAE/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=4muYzftomAE\">#2. flos / 猫又おかゆ (Cover)</a><br><img src=\"https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=G49bAinM6Lc\">#3. 恋愛裁判　Ver.戌神ころね</a><br><img src=\"https://i.ytimg.com/vi/MiuFIzr8bR0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=MiuFIzr8bR0\">#4. 【一周年記念】ヒャダインのじょーじょーゆーじょー / おかころ【歌ってみた】</a><br><img src=\"https://i.ytimg.com/vi/9PYi1080Q7k/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=9PYi1080Q7k\">#5. 失楽ペトリ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/j6P_m6adkgc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=j6P_m6adkgc\">#6. もぐもぐYUMMY！/ 猫又おかゆ</a><br><img src=\"https://i.ytimg.com/vi/kP08-jP1-7Y/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kP08-jP1-7Y\">#7. 乙女解剖 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/dXUJ0IDdX28/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=dXUJ0IDdX28\">#8. 惑星ループ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/OGYu6Kj3bL0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=OGYu6Kj3bL0\">#9. 【歌ってみた】スイートマジック 【戌神ころね】</a><br><img src=\"https://i.ytimg.com/vi/kWPQyCIKTtk/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kWPQyCIKTtk\">#10. ホタテ(Scallop)</a><br></div>"
+       "<h1>再生数ソート</h1><div style=\"float:left;\"><img src=\"https://i.ytimg.com/vi/0scxODT68X4/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=0scxODT68X4\">#1. ウミユリ海底譚 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/4muYzftomAE/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=4muYzftomAE\">#2. flos / 猫又おかゆ (Cover)</a><br><img src=\"https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=G49bAinM6Lc\">#3. 恋愛裁判　Ver.戌神ころね</a><br><img src=\"https://i.ytimg.com/vi/9PYi1080Q7k/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=9PYi1080Q7k\">#4. 失楽ペトリ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/j6P_m6adkgc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=j6P_m6adkgc\">#5. もぐもぐYUMMY！/ 猫又おかゆ</a><br><img src=\"https://i.ytimg.com/vi/MiuFIzr8bR0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=MiuFIzr8bR0\">#6. 【一周年記念】ヒャダインのじょーじょーゆーじょー / おかころ【歌ってみた】</a><br><img src=\"https://i.ytimg.com/vi/kP08-jP1-7Y/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kP08-jP1-7Y\">#7. 乙女解剖 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/dXUJ0IDdX28/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=dXUJ0IDdX28\">#8. 惑星ループ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/OGYu6Kj3bL0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=OGYu6Kj3bL0\">#9. 【歌ってみた】スイートマジック 【戌神ころね】</a><br><img src=\"https://i.ytimg.com/vi/kWPQyCIKTtk/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kWPQyCIKTtk\">#10. ホタテ(Scallop)</a><br></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 取得した情報を確認する\n",
-    "\n",
-    "holo_filenames = glob.glob(\"output/okakoro/*\")\n",
-    "for i, holo_filename in enumerate(holo_filenames):\n",
-    "    holo_videos = pd.read_csv(holo_filename, index_col=0)\n",
+    "output_file_names = glob.glob('output/videos/'+file_select+'/*')\n",
+    "for i, output_file_name in enumerate(output_file_names):\n",
+    "    videos = pd.read_csv(output_file_name, index_col=0)\n",
     "    # テーブルを結合する\n",
     "    if i == 0:\n",
-    "        all_holo_videos = holo_videos\n",
+    "        all_videos = videos\n",
     "    else:\n",
-    "        all_holo_videos = pd.concat([all_holo_videos, holo_videos])\n",
+    "        all_videos = pd.concat([all_videos, videos])\n",
     "\n",
     "# 再生数でソート\n",
-    "sorted_holo_videos = all_holo_videos.sort_values(by='Viewcount', ascending=False)\n",
-    "\n",
-    "# Table形式で表示\n",
-    "top_n = 10\n",
-    "pd.set_option('display.max_rows', top_n)\n",
-    "# sorted_holo_videos.head(top_n)\n",
+    "sorted_videos = all_videos.sort_values(by='ViewCount', ascending=False)\n",
     "\n",
     "# HTMLに変換し表示\n",
+    "top_n = 10\n",
     "html = '<h1>再生数ソート</h1>'\n",
     "html += '<div style=\"float:left;\">'\n",
     "for i in range(top_n):\n",
-    "    html += ('<img src=\"'+np.array(sorted_holo_videos['Thumbnail'])[i] +' \"alt=\"取得できませんでした\" width=\"100\">')\n",
-    "    # サンプルIDを入れておく\n",
-    "    html += ('<a href=\"https://www.youtube.com/watch?v='+np.array(sorted_holo_videos['Id'])[i]+'\">#'+str(i+1)+'. '+np.array(sorted_holo_videos['Title'])[i]+'</a><br>')\n",
+    "    html += ('<img src=\"'+np.array(sorted_videos['Thumbnail'])[i] +' \"alt=\"取得できませんでした\" width=\"100\">')\n",
+    "    html += ('<a href=\"https://www.youtube.com/watch?v='+np.array(sorted_videos['Id'])[i]+'\">#'+str(i+1)+'. '+np.array(sorted_videos['Title'])[i]+'</a><br>')\n",
     "html += '</div>'\n",
-    "\n",
     "HTML(html)"
    ]
   }
