細かい文言を整理

--- a/classify_videos.ipynb
+++ b/classify_videos.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "全動画数: 32\n"
+      "全動画数: 44\n"
      ]
     },
     {
@@ -98,10 +98,28 @@
        "      <td>359</td>\n",
        "      <td>PT5M59S</td>\n",
        "      <td>わん！\\n\\n前回→https://www.youtube.com/watch?v=BaYx...</td>\n",
-       "      <td>144570</td>\n",
-       "      <td>8444</td>\n",
-       "      <td>42</td>\n",
-       "      <td>207</td>\n",
+       "      <td>145488</td>\n",
+       "      <td>8448</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3uZof09cUlA</td>\n",
+       "      <td>戌神ころね</td>\n",
+       "      <td>UChAnqc_AY5_I3Px5dig3X1Q</td>\n",
+       "      <td>2021-08-24T13:46:23Z</td>\n",
+       "      <td>8位以下なら即終了・リベンジのリベンジ・エターナル・ファイナルラスト</td>\n",
+       "      <td>https://i.ytimg.com/vi/3uZof09cUlA/hqdefault.jpg</td>\n",
+       "      <td>20</td>\n",
+       "      <td>375</td>\n",
+       "      <td>PT6M15S</td>\n",
+       "      <td>Play Game : Mario Kart 8 Deluxe ( switch )\\nタグ...</td>\n",
+       "      <td>118973</td>\n",
+       "      <td>6120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>313</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -111,21 +129,26 @@
       "text/plain": [
        "            Id   Name                 ChannelId                  Date  \\\n",
        "0  hlwojkAO61A  戌神ころね  UChAnqc_AY5_I3Px5dig3X1Q  2020-08-23T04:38:18Z   \n",
+       "1  3uZof09cUlA  戌神ころね  UChAnqc_AY5_I3Px5dig3X1Q  2021-08-24T13:46:23Z   \n",
        "\n",
-       "           Title                                         Thumbnail  \\\n",
-       "0  早口言葉、噛んだら即終了！  https://i.ytimg.com/vi/hlwojkAO61A/hqdefault.jpg   \n",
+       "                                Title  \\\n",
+       "0                       早口言葉、噛んだら即終了！   \n",
+       "1  8位以下なら即終了・リベンジのリベンジ・エターナル・ファイナルラスト   \n",
        "\n",
-       "   CategoryId  Duration DurationOriginal  \\\n",
-       "0          24       359          PT5M59S   \n",
+       "                                          Thumbnail  CategoryId  Duration  \\\n",
+       "0  https://i.ytimg.com/vi/hlwojkAO61A/hqdefault.jpg          24       359   \n",
+       "1  https://i.ytimg.com/vi/3uZof09cUlA/hqdefault.jpg          20       375   \n",
        "\n",
-       "                                         Description  ViewCount  LikeCount  \\\n",
-       "0  わん！\\n\\n前回→https://www.youtube.com/watch?v=BaYx...     144570       8444   \n",
+       "  DurationOriginal                                        Description  \\\n",
+       "0          PT5M59S  わん！\\n\\n前回→https://www.youtube.com/watch?v=BaYx...   \n",
+       "1          PT6M15S  Play Game : Mario Kart 8 Deluxe ( switch )\\nタグ...   \n",
        "\n",
-       "   DislikeCount  CommentCount  Label  \n",
-       "0            42           207      0  "
+       "   ViewCount  LikeCount  DislikeCount  CommentCount  Label  \n",
+       "0     145488       8448             0           202      0  \n",
+       "1     118973       6120             0           313      0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,23 +157,21 @@
     "# trainから動画を取得する\n",
     "file_select = 'okakoro'\n",
     "# file_select = 'hololive'\n",
-    "# file_select = 'hololive_update'\n",
     "file_names = glob.glob('output/'+file_select+'/*')\n",
     "\n",
     "all_videos = pd.read_csv('output/train/'+file_select+'/videos.csv', index_col=0)\n",
     "# filtered_videos = filtered_videos.fillna('Nan')\n",
     "print(\"全動画数:\", all_videos.shape[0])\n",
-    "all_videos.head(1)"
+    "all_videos.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 歌動画一覧を渡しフィルタの妥当性を検証\n",
-    "# テーブルを表示する\n",
+    "# 歌動画一覧を渡しフィルタの性能を評価\n",
     "def validation_filter(filtered_videos, all_videos):\n",
     "    pred_1 = filtered_videos.shape[0]\n",
     "    true_positive = filtered_videos[filtered_videos['Label']==1].shape[0]\n",
@@ -177,7 +198,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 人力で分類\n",
+    "## ルールベースで分類\n",
+    "以下の基準でルールを作り適当に分類\n",
     "* カテゴリによるフィルタリング\n",
     "* 単語によるフィルタリング\n",
     "* タグによるフィルタリング"
@@ -185,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "フィルタリング後のデータ数： 19\n",
-      "Accuracy: 0.875\n"
+      "フィルタリング後のデータ数： 28\n",
+      "Accuracy: 0.5909090909090909\n"
      ]
     }
    ],
@@ -250,8 +272,6 @@
     "        if keyword in desc_upper:\n",
     "            filtered_ids[i] += 1\n",
     "\n",
-    "# descriptionは関係ない情報もかなり含まれnegative wordの検出が難しいため保留\n",
-    "\n",
     "filetered_videos = all_videos[filtered_ids > 1]\n",
     "print(\"フィルタリング後のデータ数：\", filetered_videos.shape[0])\n",
     "accuracy = validation_filter(filetered_videos, all_videos)\n",
@@ -297,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,15 +328,12 @@
     "# トークナイザの準備\n",
     "MODEL_NAME = 'cl-tohoku/bert-base-japanese-whole-word-masking'\n",
     "tokenizer = BertJapaneseTokenizer.from_pretrained(MODEL_NAME)\n",
-    "\n",
-    "# Classifierの初期化が上手くいってません的なエラーが出るがTokenizerしか使わないので無視\n",
-    "# bert_sc = BertForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=2)\n",
     "# print(bert_sc.config) # 語彙数が32000であることを確認"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +440,7 @@
       "k-cross-validation : 3 / 5\n",
       "k-cross-validation : 4 / 5\n",
       "k-cross-validation : 5 / 5\n",
-      "CV Accuracy 0.71875\n"
+      "CV Accuracy 0.7272727272727273\n"
      ]
     }
    ],
@@ -434,9 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[UNK]', '様', '##@', '##u', '##又', 'ne', '_', 'Mi', 'おか', '猫', '##ゆ', '##ta', '##x', '##l', '本家', '##ko', '##ie', 'Mov', '##r', '##ay']\n",
+      "['Mar', 'Game', 'ころ', 'Play', '##えもん', '##itch', '##am', '→', '##itter', '##io', 'tw', 'Twitter', '生', '##iko', '##ug', '#', '##神', '##e', 'in', '##ron']\n"
+     ]
+    }
+   ],
    "source": [
     "# 頻度が高い単語を取り出す\n",
     "freq_word_ids = []\n",
@@ -449,23 +475,23 @@
     "# 特定のクラスでのみ頻度が高い単語を取り出す\n",
     "spec_word_ids = freq_word_ids[1] - freq_word_ids[0]\n",
     "spec_word_rank = np.argsort(spec_word_ids)[::-1]\n",
-    "# print(tokenizer.convert_ids_to_tokens(spec_word_rank[:20]))\n",
-    "# print(tokenizer.convert_ids_to_tokens(spec_word_rank[-20:]))"
+    "print(tokenizer.convert_ids_to_tokens(spec_word_rank[:20]))\n",
+    "print(tokenizer.convert_ids_to_tokens(spec_word_rank[-20:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.75250611 -0.61300439 -0.47079393 -0.45284439  0.        ]\n",
-      "['##e', '/', '(', ')', '[PAD]']\n",
-      "[1.61691563 0.         0.         0.         0.        ]\n",
-      "['公式', '##巽', 'ホラー', '敗れる', 'もたらさ']\n"
+      "[-0.84059914 -0.64827974 -0.56814835 -0.20505461 -0.15746338]\n",
+      "['##e', '##ok', '##w', ')', 'な']\n",
+      "[2.47054917 0.94155783 0.         0.         0.        ]\n",
+      "['オリジナル', '曲', '##巽', '日程', 'マーティン']\n"
      ]
     }
    ],
@@ -498,24 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# -1のデータに対しては予測をして出力を返してデータベースに結合\n",
-    "\n",
-    "# IDを可視化するための一時処理\n",
-    "video_ids = X_test.T[32000].astype(int)\n",
-    "X_test_ = X_test.T[0:32000].T\n",
-    "Y_pred = lr.predict(X_test_)\n",
-    "# print(np.sum(Y_pred==Y_test), '/', Y_test.shape[0])\n",
-    "\n",
-    "HTML(output_html_test(all_videos, Y_pred, video_ids, top_n=16))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,19 +561,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>動画一覧を表示</h1><div style=\"float:left;\"><h2>非歌動画</h2><br><img src=\"https://i.ytimg.com/vi/Dp4-sTORecc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/cFncUvp3FMw/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/s0gdhZun6sw/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><br><h2>歌動画</h2><br><img src=\"https://i.ytimg.com/vi/OGYu6Kj3bL0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/9PYi1080Q7k/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/4muYzftomAE/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/d1SPCBrEYSA/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><br></div>"
+       "<h1>動画一覧を表示</h1><div style=\"float:left;\"><h2>非歌動画</h2><br><img src=\"https://i.ytimg.com/vi/RfUWTuwb_S8/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/Dp4-sTORecc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/lJHaTKM1pIY/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><br><h2>歌動画</h2><br><img src=\"https://i.ytimg.com/vi/eBjPG7oxqFU/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/gFVC0p4lknw/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/kP08-jP1-7Y/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><img src=\"https://i.ytimg.com/vi/7jk8e94Cr7U/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"150\"><br></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,9 +585,8 @@
     "video_ids = X_test.T[32000].astype(int)\n",
     "X_test_ = X_test.T[0:32000].T\n",
     "Y_pred = lr.predict(X_test_)\n",
-    "# print(np.sum(Y_pred==Y_test), '/', Y_test.shape[0])\n",
     "\n",
-    "HTML(output_html_test(all_videos, Y_pred, video_ids, top_n=16))"
+    "HTML(output_html_test(all_videos, Y_pred, video_ids, top_n=10))"
    ]
   }
  ],
