--- a/get_comments.ipynb
+++ b/get_comments.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "全動画数: 18\n"
+      "全動画数: 17\n"
      ]
     },
     {
@@ -84,7 +84,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>11</th>\n",
        "      <td>JqwKeddXPOg</td>\n",
        "      <td>猫又おかゆ</td>\n",
        "      <td>UCvaTdHTWBGv3MKj3KVqJVCw</td>\n",
@@ -95,10 +95,28 @@
        "      <td>154</td>\n",
        "      <td>PT2M34S</td>\n",
        "      <td>＿\\n\\n\\n『p.h.』\\n本家様▶https://youtu.be/AKQWRnZ_Fc...</td>\n",
-       "      <td>2151939</td>\n",
-       "      <td>81631</td>\n",
-       "      <td>282</td>\n",
-       "      <td>1579</td>\n",
+       "      <td>3597013</td>\n",
+       "      <td>103314</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>G49bAinM6Lc</td>\n",
+       "      <td>戌神ころね</td>\n",
+       "      <td>UChAnqc_AY5_I3Px5dig3X1Q</td>\n",
+       "      <td>2020-02-22T12:15:11Z</td>\n",
+       "      <td>恋愛裁判　Ver.戌神ころね</td>\n",
+       "      <td>https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg</td>\n",
+       "      <td>22</td>\n",
+       "      <td>222</td>\n",
+       "      <td>PT3M42S</td>\n",
+       "      <td>本家様：\\nhttps://www.youtube.com/watch?v=TXzfQ0cP...</td>\n",
+       "      <td>7745099</td>\n",
+       "      <td>175007</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4141</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -107,22 +125,27 @@
       ],
       "text/plain": [
        "             Id   Name                 ChannelId                  Date  \\\n",
-       "12  JqwKeddXPOg  猫又おかゆ  UCvaTdHTWBGv3MKj3KVqJVCw  2021-07-09T12:00:15Z   \n",
+       "11  JqwKeddXPOg  猫又おかゆ  UCvaTdHTWBGv3MKj3KVqJVCw  2021-07-09T12:00:15Z   \n",
+       "12  G49bAinM6Lc  戌神ころね  UChAnqc_AY5_I3Px5dig3X1Q  2020-02-22T12:15:11Z   \n",
        "\n",
        "                  Title                                         Thumbnail  \\\n",
-       "12  p.h. / 猫又おかゆ(cover)  https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg   \n",
+       "11  p.h. / 猫又おかゆ(cover)  https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg   \n",
+       "12       恋愛裁判　Ver.戌神ころね  https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg   \n",
        "\n",
        "    CategoryId  Duration DurationOriginal  \\\n",
-       "12          20       154          PT2M34S   \n",
+       "11          20       154          PT2M34S   \n",
+       "12          22       222          PT3M42S   \n",
        "\n",
        "                                          Description  ViewCount  LikeCount  \\\n",
-       "12  ＿\\n\\n\\n『p.h.』\\n本家様▶https://youtu.be/AKQWRnZ_Fc...    2151939      81631   \n",
+       "11  ＿\\n\\n\\n『p.h.』\\n本家様▶https://youtu.be/AKQWRnZ_Fc...    3597013     103314   \n",
+       "12  本家様：\\nhttps://www.youtube.com/watch?v=TXzfQ0cP...    7745099     175007   \n",
        "\n",
        "    DislikeCount  CommentCount  Label  \n",
-       "12           282          1579      1  "
+       "11             0          1692      1  \n",
+       "12             0          4141      1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,12 +157,12 @@
     "all_songs = all_videos[all_videos['Label'] == 1]\n",
     "\n",
     "print(\"全動画数:\", all_songs.shape[0])\n",
-    "all_songs.head(1)"
+    "all_songs.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
