--- a/get_videos.ipynb
+++ b/get_videos.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# get_videos\n",
     "\n",
-    "* チャンネルID一覧を入力とし、全てのチャンネルの動画一覧を取得します\n",
-    "* Quota上限に達した場合は、その段階までの動画一覧を保存します"
+    "* チャンネルID一覧を入力とし、全てのチャンネルにて投稿された動画情報を取得し、csvファイルに書き込みます\n",
+    "* Youtube Data APIのQuota上限に達した場合は、その段階までの動画一覧を保存します"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "# 動画一覧を取得する\n",
+    "# 動画情報一覧を取得する\n",
     "for i, channel_id in enumerate(channel_ids):\n",
     "    name = names[i]\n",
     "    print(name, \":\", i+1, \"/\", channel_ids.size)\n",
@@ -257,6 +257,7 @@
     "                              thumbnail, category_id, duration, duration_origin, description, \n",
     "                              view_count, like_count, dislike_count, comment_count])\n",
     "    \n",
+    "    # 動画情報を書き込む\n",
     "    # video_idが取得できていない場合スキップする\n",
     "    if len(video_ids) != 0:\n",
     "        video_details_numpy = np.array(video_details)\n",
@@ -272,19 +273,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h1>再生数ソート</h1><div style=\"float:left;\"><img src=\"https://i.ytimg.com/vi/0scxODT68X4/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=0scxODT68X4\">#1. ウミユリ海底譚 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/4muYzftomAE/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=4muYzftomAE\">#2. flos / 猫又おかゆ (Cover)</a><br><img src=\"https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=G49bAinM6Lc\">#3. 恋愛裁判　Ver.戌神ころね</a><br><img src=\"https://i.ytimg.com/vi/9PYi1080Q7k/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=9PYi1080Q7k\">#4. 失楽ペトリ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/j6P_m6adkgc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=j6P_m6adkgc\">#5. もぐもぐYUMMY！/ 猫又おかゆ</a><br><img src=\"https://i.ytimg.com/vi/MiuFIzr8bR0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=MiuFIzr8bR0\">#6. 【一周年記念】ヒャダインのじょーじょーゆーじょー / おかころ【歌ってみた】</a><br><img src=\"https://i.ytimg.com/vi/kP08-jP1-7Y/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kP08-jP1-7Y\">#7. 乙女解剖 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/dXUJ0IDdX28/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=dXUJ0IDdX28\">#8. 惑星ループ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/OGYu6Kj3bL0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=OGYu6Kj3bL0\">#9. 【歌ってみた】スイートマジック 【戌神ころね】</a><br><img src=\"https://i.ytimg.com/vi/kWPQyCIKTtk/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kWPQyCIKTtk\">#10. ホタテ(Scallop)</a><br></div>"
+       "<h1>再生数ソート</h1><div style=\"float:left;\"><img src=\"https://i.ytimg.com/vi/4muYzftomAE/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=4muYzftomAE\">#1. flos / 猫又おかゆ (Cover)</a><br><img src=\"https://i.ytimg.com/vi/0scxODT68X4/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=0scxODT68X4\">#2. ウミユリ海底譚 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/9PYi1080Q7k/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=9PYi1080Q7k\">#3. 失楽ペトリ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=G49bAinM6Lc\">#4. 恋愛裁判　Ver.戌神ころね</a><br><img src=\"https://i.ytimg.com/vi/j6P_m6adkgc/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=j6P_m6adkgc\">#5. もぐもぐYUMMY！/ 猫又おかゆ</a><br><img src=\"https://i.ytimg.com/vi/MiuFIzr8bR0/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=MiuFIzr8bR0\">#6. 【一周年記念】ヒャダインのじょーじょーゆーじょー / おかころ【歌ってみた】</a><br><img src=\"https://i.ytimg.com/vi/kP08-jP1-7Y/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=kP08-jP1-7Y\">#7. 乙女解剖 / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/wLNTAMY1NZA/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=wLNTAMY1NZA\">#8. Doggy god's street / 戌神ころね</a><br><img src=\"https://i.ytimg.com/vi/dXUJ0IDdX28/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=dXUJ0IDdX28\">#9. 惑星ループ / 猫又おかゆ(cover)</a><br><img src=\"https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg \"alt=\"取得できませんでした\" width=\"100\"><a href=\"https://www.youtube.com/watch?v=JqwKeddXPOg\">#10. p.h. / 猫又おかゆ(cover)</a><br></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
