--- a/get_comments.ipynb
+++ b/get_comments.ipynb
@@ -243,7 +243,7 @@
     "        items = comment['items']\n",
     "        for item in items:\n",
     "            count += 1\n",
-    "            # 'authorChannelId'が無いエラーが出てきた（この辺の型チェックどうすんのかね？）\n",
+    "            # 'authorChannelId'ない場合は除外する\n",
     "            if 'authorChannelId' in item['snippet']['topLevelComment']['snippet'].keys():\n",
     "                channel_id = item['snippet']['topLevelComment']['snippet']['authorChannelId']['value']\n",
     "                channel_ids.append(channel_id)\n",
@@ -287,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "全動画数: 18\n"
+      "全動画数: 17\n"
      ]
     },
     {
@@ -335,8 +335,8 @@
        "      <td>2021-07-09T12:00:15Z</td>\n",
        "      <td>p.h. / 猫又おかゆ(cover)</td>\n",
        "      <td>https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg</td>\n",
-       "      <td>2152671</td>\n",
-       "      <td>UCNmpH2fGPKXBgzfn61kgvfA,UCSp2axqTjK1yH2RZclbx...</td>\n",
+       "      <td>3597111</td>\n",
+       "      <td>UC1B0CXYaWdjXrPorG3syFlA,UCOwDr6a-HsQxGLIpK1vQ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -345,8 +345,8 @@
        "      <td>2020-02-22T12:15:11Z</td>\n",
        "      <td>恋愛裁判　Ver.戌神ころね</td>\n",
        "      <td>https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg</td>\n",
-       "      <td>6802711</td>\n",
-       "      <td>UCED6sLuOSEdCGYHvooJPiEg,UCesNuEgizYMsZtXVqUH4...</td>\n",
+       "      <td>7745172</td>\n",
+       "      <td>UCesNuEgizYMsZtXVqUH4Btw,UCW_Ck9VtTjZ3b19jSWqW...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -358,15 +358,15 @@
        "1  G49bAinM6Lc  Korone Ch. 戌神ころね  2020-02-22T12:15:11Z       恋愛裁判　Ver.戌神ころね   \n",
        "\n",
        "                                          Thumbnail  ViewCount  \\\n",
-       "0  https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg    2152671   \n",
-       "1  https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg    6802711   \n",
+       "0  https://i.ytimg.com/vi/JqwKeddXPOg/hqdefault.jpg    3597111   \n",
+       "1  https://i.ytimg.com/vi/G49bAinM6Lc/hqdefault.jpg    7745172   \n",
        "\n",
        "                                          CommentIds  \n",
-       "0  UCNmpH2fGPKXBgzfn61kgvfA,UCSp2axqTjK1yH2RZclbx...  \n",
-       "1  UCED6sLuOSEdCGYHvooJPiEg,UCesNuEgizYMsZtXVqUH4...  "
+       "0  UC1B0CXYaWdjXrPorG3syFlA,UCOwDr6a-HsQxGLIpK1vQ...  \n",
+       "1  UCesNuEgizYMsZtXVqUH4Btw,UCW_Ck9VtTjZ3b19jSWqW...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
